force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <default>true</default>
                <label>Call</label>
            </value>
            <value>
                <fullName>Meeting (onsite)</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Pay Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>