force-app/main/default/objects/Activity/fields/Assigned_to_User_Region__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User_Region__c</fullName>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to: User (Region)</label>
    <type>Text</type>
</CustomField>