force-app/main/default/objects/Activity/fields/Black_Spot__c.field-meta.xml
<CustomField>
    <fullName>Black_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Something made by Max, better don&apos;t ask....
Delete if Max has moved on</description>
    <inlineHelpText>He is dead, Jim!</inlineHelpText>
    <label>Black Spot</label>
    <type>Checkbox</type>
</CustomField>