force-app/main/default/objects/Activity/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <description>To make the System value CompletedDateTime visible</description>
    <formula>CompletedDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>