force-app/main/default/objects/Activity/fields/Days_overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_overdue__c</fullName>
    <formula>TODAY()- ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>