force-app/main/default/objects/Activity/fields/NetSuiteId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteId__c</fullName>
    <description>Stakeholder: NEST</description>
    <externalId>true</externalId>
    <inlineHelpText>Migration field! What was the original internal ID of this record&apos;s equivalent in NetSuite? The prefix describes the type of the Netsuite object. DO NOT TOUCH</inlineHelpText>
    <label>NetSuiteId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>