force-app/main/default/objects/Activity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>Stakeholder: Sales // Copy from the Default Opportunity field</description>
    <inlineHelpText>What is the next step to follow-up with this opportunity?</inlineHelpText>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Follow up</fullName>
            </value>
            <value>
                <fullName>Sales - Demand Analysis</fullName>
            </value>
            <value>
                <fullName>Sales - General Call</fullName>
            </value>
            <value>
                <fullName>Sales - Sales Talk</fullName>
            </value>
            <value>
                <fullName>Sales - Upselling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>