force-app/main/default/objects/Activity/fields/Next_Step_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://jira.orderbird.com/browse/CDS-1095</description>
    <inlineHelpText>Should the Next step task be assigned to somebody else? Gets assigned to you if empty</inlineHelpText>
    <label>Next Step Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>