force-app/main/default/objects/Activity/fields/Next_Step_Comments__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Comments__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-967</description>
    <inlineHelpText>Anything additional information important during the Next Step?</inlineHelpText>
    <label>Next Step Comments</label>
    <type>TextArea</type>
</CustomField>