force-app/main/default/objects/Activity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Trigger of the creation of a New Task record every time the Date is updated.
The record type is: Next_Step Record Type</description>
    <inlineHelpText>Due Date for your follow-up activity. (Time is Optional, not needed)</inlineHelpText>
    <label>Next Step Due Date</label>
    <type>DateTime</type>
</CustomField>