force-app/main/default/objects/Activity/fields/Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Date__c</fullName>
    <label>Next Step Due Date</label>
    <type>Date</type>
</CustomField>