force-app/main/default/objects/Activity/fields/Next_Step_Priority__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Priority__c</fullName>
    <defaultValue>&quot;Medium&quot;</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-967</description>
    <label>Next Step Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>