force-app/main/default/objects/Activity/fields/Next_Step_Relevant_2_1__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Relevant_2_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-967
Trigger for process to create next step task from next step fields</description>
    <inlineHelpText>Should a Next Step Task be created?</inlineHelpText>
    <label>Next Step Relevant</label>
    <type>Checkbox</type>
</CustomField>