force-app/main/default/objects/Activity/fields/Next_Step_relevant__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field to realize mandatory fields ONLY on tasks created by the agent</description>
    <label>Next Step relevant</label>
    <type>Checkbox</type>
</CustomField>