force-app/main/default/objects/Activity/fields/Next_Step_Subject__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Subject__c</fullName>
    <defaultValue>&quot;Next Step&quot;</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-967</description>
    <inlineHelpText>What is the subject for the next step?</inlineHelpText>
    <label>Next Step Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>