force-app/main/default/objects/Activity/fields/Next_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Type__c</fullName>
    <defaultValue>&quot;Sales - Follow up&quot;</defaultValue>
    <inlineHelpText>Define a new type of Task for your Next Step Activity</inlineHelpText>
    <label>Next Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Demand Analysis</fullName>
            </value>
            <value>
                <fullName>Sales - Follow up</fullName>
                <default>true</default>
                <label>Sales - Follow up</label>
            </value>
            <value>
                <fullName>Sales - Follow up (Corona)</fullName>
            </value>
            <value>
                <fullName>Sales - Sales Talk</fullName>
            </value>
            <value>
                <fullName>Sales - Order Process</fullName>
            </value>
            <value>
                <fullName>Sales - Support Issues</fullName>
            </value>
            <value>
                <fullName>Sales - General Issues</fullName>
            </value>
            <value>
                <fullName>Sales - Upselling</fullName>
            </value>
            <value>
                <fullName>AccM - pay onboarding</fullName>
            </value>
            <value>
                <fullName>AccM - Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>