force-app/main/default/objects/Activity/fields/Notes_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Comments__c</fullName>
    <label>Notes and Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>