force-app/main/default/objects/Activity/fields/Opportunity_created_by__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_created_by__c</fullName>
    <formula>Opportunity__r.CreatedBy.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity created by</label>
    <type>Text</type>
</CustomField>