force-app/main/default/objects/Activity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Stakeholder: Sales
Rolls up to the opportunity after saving.</description>
    <inlineHelpText>Please update the Stage based on the outcome of your conversation. Will be reflected on the opportunity after saving</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Introduction / Demo</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>