force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Reached - no Voicemail</fullName>
            </value>
            <value>
                <fullName>Not Reached - Voicemail</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Reached but busy</fullName>
            </value>
            <value>
                <fullName>Reached but not willing to talk</fullName>
            </value>
            <value>
                <fullName>Reached but contact not available</fullName>
            </value>
            <value>
                <fullName>Reached -but only want to have an offer</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Demo completed</fullName>
            </value>
            <value>
                <fullName>Task Completed</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Successful - Lost</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancellation by orderbird</fullName>
            </value>
            <value>
                <fullName>Cancellation via Calendly</fullName>
            </value>
            <value>
                <fullName>No Interest anymore</fullName>
            </value>
            <value>
                <fullName>Already has a POS</fullName>
            </value>
            <value>
                <fullName>E-Mail bounced</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Watched Video</fullName>
            </value>
            <value>
                <fullName>Aborted - does not want pay</fullName>
            </value>
            <value>
                <fullName>Aborted - needs Concardis</fullName>
            </value>
            <value>
                <fullName>Outcome not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>