force-app/main/default/objects/Activity/fields/Owner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Mobile__c</fullName>
    <formula>BLANKVALUE(Owner:User.MobilePhone, &apos;+49 30208983099&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mobile</label>
    <type>Text</type>
</CustomField>