force-app/main/default/objects/Activity/fields/Preview__c.field-meta.xml
<CustomField>
    <fullName>Preview__c</fullName>
    <label>Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>