force-app/main/default/objects/Activity/fields/Process_Trigger_Text__c.field-meta.xml
<CustomField>
    <fullName>Process_Trigger_Text__c</fullName>
    <label>Process Trigger Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>