force-app/main/default/objects/Activity/fields/Recently_failed__c.field-meta.xml
<CustomField>
    <fullName>Recently_failed__c</fullName>
    <formula>IF(Completed_Date_Time__c &gt; Opportunity__r.Newest_successful_activity__c &amp;&amp;  NOT(ISPICKVAL(Outcome__c,&apos;Successful&apos;)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recently failed</label>
    <type>Checkbox</type>
</CustomField>