force-app/main/default/objects/Activity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__c)),TEXT(Account__r.Region__c), TEXT(Opportunity__r.Account.Region__c ))</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>