force-app/main/default/objects/Activity/fields/Related_to_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_to_ID__c</fullName>
    <formula>WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to ID c</label>
    <type>Text</type>
</CustomField>