force-app/main/default/objects/Activity/fields/Send_Demo_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Demo_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: SDRs  https://jira.orderbird.com/browse/CDS-1769</description>
    <inlineHelpText>Do you wanna send the default confirmation mail?</inlineHelpText>
    <label>Send Demo Confirmation DE</label>
    <type>Checkbox</type>
</CustomField>