force-app/main/default/objects/Activity/fields/Start_TIME__c.field-meta.xml
<CustomField>
    <fullName>Start_TIME__c</fullName>
    <description>Für Winterzeit: &apos;+ (1/24)&apos;  Für Sommerzeit &apos;+ (2/24)&apos;</description>
    <formula>Left(
  TEXT(
    TIMEVALUE(ActivityDateTime + (2/24)
    )
  ),5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start TIME</label>
    <type>Text</type>
</CustomField>