force-app/main/default/objects/Activity/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>NOT USED</inlineHelpText>
    <label>Subject (Email)</label>
    <type>TextArea</type>
</CustomField>