force-app/main/default/objects/Activity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <inlineHelpText>To differentiate between inbound and outbound Calls</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Outbound after Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>