force-app/main/default/objects/Activity/fields/Successful__c.field-meta.xml
<CustomField>
    <fullName>Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Was the call/ meeting successful? E.g. did you reach someone?</inlineHelpText>
    <label>Successful</label>
    <type>Checkbox</type>
</CustomField>