force-app/main/default/objects/Activity/fields/Template_Branding__c.field-meta.xml
<CustomField>
    <fullName>Template_Branding__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-3198</description>
    <formula>IF(NOT(ISBLANK(Opportunity__r.Id)),Opportunity__r.Template_Branding__c, Account__r.Template_Branding__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Branding</label>
    <type>Text</type>
</CustomField>