force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Indicates the type of Activity by department</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Demand Analysis</fullName>
            </value>
            <value>
                <fullName>Sales - Follow up</fullName>
            </value>
            <value>
                <fullName>Sales - Follow up (Corona)</fullName>
            </value>
            <value>
                <fullName>Sales - Demo (online)</fullName>
            </value>
            <value>
                <fullName>Sales - Demo (onsite)</fullName>
            </value>
            <value>
                <fullName>Sales - Sales Talk</fullName>
                <default>true</default>
                <label>Sales - Sales Talk</label>
            </value>
            <value>
                <fullName>Sales - Order Process</fullName>
            </value>
            <value>
                <fullName>Sales - Support Issues</fullName>
            </value>
            <value>
                <fullName>Sales - General Issues</fullName>
            </value>
            <value>
                <fullName>Sales - Upselling</fullName>
            </value>
            <value>
                <fullName>AccM - pay onboarding</fullName>
            </value>
            <value>
                <fullName>AccM - Compensation</fullName>
            </value>
            <value>
                <fullName>PM - Partner check-in</fullName>
            </value>
            <value>
                <fullName>PM - General Issues</fullName>
            </value>
            <value>
                <fullName>Support - General Issues</fullName>
            </value>
            <value>
                <fullName>Support - Incoming Voicemail</fullName>
            </value>
            <value>
                <fullName>Support - Webinar Orderpad</fullName>
            </value>
            <value>
                <fullName>Support - Webinar my.orderbird</fullName>
            </value>
            <value>
                <fullName>Support - Webinar Settings</fullName>
            </value>
            <value>
                <fullName>Support - 1-on-1-Training</fullName>
            </value>
            <value>
                <fullName>Support - Welcome Call</fullName>
            </value>
            <value>
                <fullName>Support - Ketchup Call</fullName>
            </value>
            <value>
                <fullName>Support - Goodbye Call</fullName>
            </value>
            <value>
                <fullName>Support - Follow Up</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>MINI</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>