force-app/main/default/objects/Activity/fields/wbsendit__Smart_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Smart_Email_Recipient__c</fullName>
    <inlineHelpText>The recipient of the email.</inlineHelpText>
    <label>Smart Email Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>