force-app/main/default/objects/Activity/fields/wbsendit__Smart_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>wbsendit__Smart_Email_Status__c</fullName>
    <label>Smart Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>