force-app/main/default/objects/Activity/fields/WhatIDHelper__c.field-meta.xml
<CustomField>
    <fullName>WhatIDHelper__c</fullName>
    <description>Stakeholder: UNKNOWN</description>
    <inlineHelpText>INCOMPLETE</inlineHelpText>
    <label>WhatID Helper</label>
    <length>18</length>
    <type>Text</type>
</CustomField>