force-app/main/default/objects/Activity/listViews/FR_My_Team_s_Open_To_Dos.listView-meta.xml
<ListView>
    <fullName>FR_My_Team_s_Open_To_Dos</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>Activity_Type__c</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>Outcome__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Assigned_to_User_Region__c</field>
        <operation>contains</operation>
        <value>FR</value>
    </filters>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>FR: My Team&apos;s Open To-Dos</label>
    <language>en_US</language>
    <sharedTo>
        <group>Sales_Team_FRANCE</group>
    </sharedTo>
</ListView>