force-app/main/default/objects/Activity/listViews/My_Events_Demos_TOMORROW.listView-meta.xml
<ListView>
    <fullName>My_Events_Demos_TOMORROW</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>Activity_Type__c</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>Outcome__c</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Activity_Type__c</field>
        <operation>equals</operation>
        <value>Meeting (onsite),Demo</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <label>_My Events/ Demos TOMORROW</label>
    <language>en_US</language>
</ListView>