force-app/main/default/objects/Activity/listViews/My_open_Tasks_all.listView-meta.xml
<ListView>
    <fullName>My_open_Tasks_all</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>Notes_and_Comments__c</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>Activity_Type__c</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>_My Open Tasks</label>
    <language>en_US</language>
</ListView>