force-app/main/default/objects/Activity/listViews/My_Open_To_Dos_TODAY.listView-meta.xml
<ListView>
    <fullName>My_Open_To_Dos_TODAY</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <columns>TASK.STATUS</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>Activity_Type__c</columns>
    <columns>Outcome__c</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>_My Open To-Dos TODAY</label>
    <language>en_US</language>
</ListView>