force-app/main/default/objects/Activity/listViews/My_past_Demos_not_completed.listView-meta.xml
<ListView>
    <fullName>My_past_Demos_not_completed</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>Activity_Type__c</columns>
    <columns>ACTIVITY_SUBTYPE</columns>
    <columns>Outcome__c</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Activity_Type__c</field>
        <operation>equals</operation>
        <value>Demo</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>equals</operation>
    </filters>
    <label>_My Past Demos not completed</label>
    <language>en_US</language>
</ListView>